changes to display correctly on smaller screen sizes

--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -95,6 +95,25 @@ h1 small,
 h2 small,
 h3 small{
 	text-transform: none;
+	overflow-wrap: break-word;
+}
+
+
+/* bootstrap mobile first override */
+	.row {
+			margin-right: 0px;
+			margin-left: 0px;
+	}	
+
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+.input-group {
+	margin: 0 3px;
 }
 
 #page-wrapper{
@@ -252,7 +271,8 @@ text-align:right;
 	left: auto;
 	top: 0.5rem;
 	overflow-x:hidden;
-	text-overflow: ellipsis;
+	/*text-overflow: ellipsis;*/
+	overflow-wrap: break-word;
 }
 
 .hash::before{
@@ -314,23 +334,100 @@ text-align:right;
   outline:solid 2px #b9d3ee;
 }
 
+.subnav {
+	width: 100%;
+	float: none;
+	margin: 0 0 0 0;
+	display: inline-block;
+	vertical-align: middle;
+	text-align: right;
+	position: relative;
+	margin-top: 0.5em;
+	bottom: 0;
+	right: 1rem;
+	float: right;
+	/*width: 30%;*/
+}
+
+.subnav li {
+	display: inline-block;
+	padding-top: 0.3em;
+	padding-left: 1em;
+	padding-right: 1em;	
+	background:whitesmoke;
+	outline: solid 1px white;
+	padding: 0 0 0 0;
+}	
+	
+.subnav li:hover {	
+	background:#b7b7b7;
+}
+
+.subnav li a:hover {	
+	background:#b7b7b7;
+}
+
+.subnav > li {
+	float: left;
+}
+
+
+.data-table {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.data-table > thead {
+  background-color: #f1f1f1;
+}
+
+.data-table  th {
+  padding: 5px;
+}
+
+.data-table tr:hover {
+  background-color: #f5f5f5;
+  cursor: default;
+}
+
+.data-table tbody td {
+	text-align: center;
+	
+}
+
 @media(min-width:480px) {
 
   .panel {
         font-size:1.5rem;
   }
+	
+	.data-table {
+  	width: 80%;
+	}
 
 }
 
 @media(min-width:768px) {
+	.row {
+			margin-right: -15px;
+			margin-left: -15px;
+	}	
+	
+	.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+			position: relative;
+			min-height: 1px;
+			padding-right: 15px;
+			padding-left: 15px;
+	}	
+	
 	.hash-header{
 	display:block;
 	}
 
-  	.navbar {
-    	position:relative;
-    	height:12rem;
-  	}
+	.navbar {
+		position:relative;
+		height:12rem;
+	}
   
   	.custom-search-form{
   		width:50%;
@@ -398,6 +495,17 @@ text-align:right;
     padding-right: 15px;
     padding-left: 15px;
   }
+	
+	.subnav li {
+		padding-top: 0.3em;
+		padding-left: 1em;
+		padding-right: 1em;	
+	}	
+	
+	.data-table {
+  	width: 50%;
+	}	
+	
 }
 
 .closed {
@@ -448,62 +556,4 @@ text-align:right;
  font-weight:bold;
  margin-top:20px;
  padding-left:2%;
-}
-
-.data-table {
-  width: 50%;
-  margin: 0 auto;
-}
-
-.data-table > thead {
-  background-color: #f1f1f1;
-}
-
-.data-table  th {
-  padding: 5px;
-}
-
-.data-table tr:hover {
-  background-color: #f5f5f5;
-  cursor: default;
-}
-
-.subnav {
-	width: 100%;
-	float: none;
-	margin: 0 0 0 0;
-	display: inline-block;
-	vertical-align: middle;
-	text-align: right;
-	position: relative;
-	/*max-width: 420px;*/
-	margin-top: 0.5em;
-	/*outline: solid 1px green;*/
-	margin: 0;
-	bottom: 0;
-	right: 1rem;
-	float: right;
-	/*width: 30%;*/
-	
-}
-
-.subnav li {
-	display: inline-block;
-	padding-top: 0.3em;
-	padding-left: 1em;
-	padding-right: 1em;	
-	background:whitesmoke;
-	outline: solid 1px white;
-}	
-	
-.subnav li:hover {	
-	background:#b7b7b7;
-}
-
-.subnav li a:hover {	
-	background:#b7b7b7;
-}
-
-.subnav > li {
-	float: left;
 }
